fix: :lipstick: Fix a menu display bug on mobile view

--- a/yugen_dev/Views/Home/_Menus.cshtml.css
+++ b/yugen_dev/Views/Home/_Menus.cshtml.css
@@ -9,7 +9,7 @@
 
 @media (max-width: 768px) {
     .menu-container {
-        flex-direction: column;
+        flex-direction: column!important;
     }
 
     .jap-name {
